<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dt"
            android:layout_gravity="center"
            android:textSize="13sp"
            android:layout_marginStart="40dp" />

        <TextView
            android:id="@+id/dt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={viewModel.name}"
            android:layout_gravity="center"
            android:paddingStart="20dp"
            android:textColor="@color/colorLoginBtn"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:layout_gravity="center"
            android:textSize="13sp"
            android:layout_marginStart="40dp" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={viewModel.pressure}"
            android:layout_gravity="center"
            android:paddingStart="20dp"
            android:textColor="@color/colorLoginBtn"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:layout_gravity="center"
            android:textSize="13sp"
            android:layout_marginStart="40dp" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={viewModel.humidity}"
            android:layout_gravity="center"
            android:paddingStart="20dp"
            android:textColor="@color/colorLoginBtn"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clouds"
            android:layout_gravity="center"
            android:textSize="13sp"
            android:layout_marginStart="40dp" />

        <TextView
            android:id="@+id/clouds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={viewModel.clouds}"
            android:layout_gravity="center"
            android:paddingStart="20dp"
            android:textColor="@color/colorLoginBtn"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:layout_gravity="center"
            android:textSize="13sp"
            android:layout_marginStart="40dp" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="20dp"
            android:textColor="@color/colorLoginBtn"
            android:textSize="13sp" />

    </LinearLayout>

</LinearLayout>