<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="navigator"
            type="com.naemo.storm.ui.main.MainNavigator" />

        <variable
            name="viewModel"
            type="com.naemo.storm.ui.main.MainViewModel" />
    </data>
<LinearLayout
    android:id="@+id/main_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <EditText
            android:layout_width="347dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:text="@={viewModel.search}"
            android:background="@drawable/search_box"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorHint"
            android:textColor="@color/colorLoginBtn"
            android:textSize="13sp"
            android:textStyle="italic"
            android:paddingStart="20dp"
            android:hint="@string/neo_yokio"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/search_icon"
            android:src="@drawable/ic_search_white"
            android:layout_gravity="end"
            android:foregroundGravity="center"
            android:onClick="@{(view) -> navigator.searchName()}"
            android:paddingStart="8dp"
            android:paddingVertical="8dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="4dp"/>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:text="@string/location_weather"
        android:layout_marginTop="45dp" />
    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:layout_marginStart="40dp" />

            <TextView
                android:id="@+id/cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={viewModel.name}"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:textColor="@color/colorLoginBtn"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:layout_marginStart="40dp" />

            <TextView
                android:id="@+id/cityPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={viewModel.pressure}"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:textColor="@color/colorLoginBtn"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:layout_marginStart="40dp" />

            <TextView
                android:id="@+id/cityHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={viewModel.humidity}"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:textColor="@color/colorLoginBtn"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="90dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clouds"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:layout_marginStart="40dp" />

            <TextView
                android:id="@+id/cityClouds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={viewModel.clouds}"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:textColor="@color/colorLoginBtn"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cityTemp"
            android:layout_marginTop="120dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:layout_marginStart="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={viewModel.temperature}"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:textColor="@color/colorLoginBtn"
                android:textSize="13sp" />

        </LinearLayout>




    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/location_forecast"
        android:layout_marginTop="20dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:elevation="5dp">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="10dp"
        android:id="@+id/location_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    </androidx.cardview.widget.CardView>




</LinearLayout>

</layout>